[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/loginView.gd" type="Script" id=1]
[ext_resource path="res://sprites/placeholder_city.jpg" type="Texture" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/inputField.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2
border_color = Color( 0.0823529, 0, 1, 1 )

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="loginView" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="city" type="Sprite" parent="."]
scale = Vector2( 2.73, 2.73 )
texture = ExtResource( 2 )
centered = false

[node name="email_state" type="Control" parent="."]
margin_top = 435.0
margin_right = 721.0
margin_bottom = 518.0
theme = ExtResource( 3 )

[node name="inputField" type="LineEdit" parent="email_state"]
margin_left = 10.0
margin_top = 19.0
margin_right = 710.0
margin_bottom = 66.0
hint_tooltip = "Email"
custom_styles/focus = SubResource( 3 )
placeholder_text = "EMAIL_KS"
placeholder_alpha = 0.45
caret_blink = true
script = ExtResource( 4 )

[node name="passw_state" type="Control" parent="."]
visible = false
margin_top = 435.0
margin_right = 721.0
margin_bottom = 518.0
theme = ExtResource( 3 )

[node name="label" type="Label" parent="passw_state"]
margin_left = 10.0
margin_top = 19.0
margin_right = 710.0
margin_bottom = 72.2
hint_tooltip = "Email"
text = "someone@example.com"

[node name="inputField" type="LineEdit" parent="passw_state"]
margin_left = 10.0
margin_top = 100.0
margin_right = 710.0
margin_bottom = 147.0
hint_tooltip = "password"
secret = true
placeholder_text = "PASSW_KS"
placeholder_alpha = 0.45
caret_blink = true

[node name="button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 225.0
margin_top = 630.0
margin_right = 495.0
margin_bottom = 710.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Continuar"
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
